手机版更新

--- a/webmain/index/tpl_index.html
+++ b/webmain/index/tpl_index.html
@@ -97,7 +97,7 @@ function globalbody(){
 <script type="text/javascript" src="mode/bootstrapplugin/jquery-bootstree.js"></script>
 <script type="text/javascript" src="mode/plugin/jquery-rockdatepicker.js"></script>
 <script type="text/javascript" src="web/res/js/jquery-rockupload.js"></script>
-<script type="text/javascript" src="web/res/js/jquery-changeuser.js"></script>
+<script type="text/javascript" src="web/res/js/jquery-changeuser.js?3"></script>
 <script type="text/javascript" src="web/res/mode/calendar/jquery-rockcalendar.js"></script>
 <script type="text/javascript" src="web/res/mode/calendar/jquery-rocklunar.js"></script>
 <script type="text/javascript" src="js/option.js"></script><!--数据选项-->
