--- a/webmain/we/ying/tpl_ying.html
+++ b/webmain/we/ying/tpl_ying.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" type="text/css" href="mode/weui/weui.min.css"/>
 <link rel="stylesheet" type="text/css" href="web/res/fontawesome/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="webmain/css/rui.css?3">
+<link rel="stylesheet" type="text/css" href="webmain/css/newico/iconfont.css">
 <script type="text/javascript" src="js/jquery.js"></script>
 
 <script type="text/javascript" src="js/js.js"></script>
@@ -21,7 +22,13 @@
 <link rel="stylesheet" href="webmain/css/list.css?7">
 <script type="text/javascript" src="mode/plugin/jquery-rockdoupull.js"></script>
 <style type="text/css" >
-
+.shares{	
+    position: absolute;
+    top: 40px;
+    right: 10px;
+    background: none;
+    color: #0572AD;
+}
 </style>
 <script>
 var json = <?=json_encode($arr)?>;
