--- a/webmain/we/ying/tpl_ying.html
+++ b/webmain/we/ying/tpl_ying.html
@@ -178,7 +178,7 @@ if($yyurljs!='')echo '<script type="text/javascript" src="'.$yyurljs.'"></script
 ?>
 <script type="text/javascript" src="web/res/js/jquery-imgview.js"></script>
 <script type="text/javascript" src="web/res/js/jquery-rockupload.js"></script>
-<script type="text/javascript" src="web/res/js/jquery-changeuser.js"></script>
+<script type="text/javascript" src="web/res/js/jquery-changeuser.js?2"></script>
 <script type="text/javascript" src="web/res/mui/js/mui.min.js"></script>
 <script type="text/javascript" src="web/res/mui/js/mui.indexedlist1.js?2"></script>
 <script>
